--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
-    <h1>NEW ZEALAND</h1>
+    <header class="header">
+        <div class="container">
+            <a href="./index.html" class="logo link">New<span class="logo-span">Zealand</span></a>
+            <ul class="islands list">
+                <li><a href="#" class="link">South Island</a></li>
+                <li><a href="#" class="link">North Island</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <main>
+        <h1>NEW ZEALAND</h1>
+    </main>
+
+    <footer>
+        <div>
+            <a href="./index.html" class="logo link">New<span class="logo-span">Zealand</span></a>
+        </div>
+    </footer>
 </body>
 </html>
