--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -9,26 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lemon&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
-    <link
-        rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <header>
-        <div class="container container-header">
-                <a href="./index.html" class="link logo">New<span class="logo-span">Zealand</span>
-                    <svg width="26" height="26" class="svg-flag-logo">
-                        <use href="./images/icons.svg#icon-nz"></use>
-                    </svg>
-                </a>
+        <div class="container-header">
+            <a href="./index.html" class="link logo">New<span class="logo-span">Zealand</span>
+                <svg width="26" height="26" class="svg-flag-logo">
+                    <use href="./images/icons.svg#icon-nz"></use>
+                </svg>
+            </a>
             <ul class="list islands">
-                <li><a href="#" class="link">Wyspa Południowa</a></li>
-                <li><a href="#" class="link">Wyspa Północna</a></li>
-                <li><a href="#" class="link">Galeria Zdjęć</a></li>
+                <li><a href="#" class="link">South Island</a></li>
+                <li><a href="#" class="link">North Island</a></li>
+                <li><a href="#" class="link">Photo Gallery</a></li>
             </ul>
             <ul class="list flags">
                 <li>
@@ -59,32 +58,10 @@
     <main class="main-background">
         <section class="title-background">
             <div class="container">
-                <h1 class="title">NOWA ZELANDIA</h1>
+                <h1 class="title">NEW ZEALAND</h1>
             </div>
         </section>
-
-        <section>
-            <div class="container">
-                <h2 class="titletwo">Wyspa Południowa</h2>
-                <p>Queenstown...</p>
-                <p>Christchurch...</p>
-            </div>
-        </section>
-
-        <section>
-            <div class="container">
-                <h2 class="titletwo">Wyspa Północna</h2>
-                <p>Wellington</p>
-                <p>Auckland...</p>
-            </div>
-        </section>
-
-        <section>
-            <div class="container">
-                <h2 class="titletwo">Galeria Zdjęć</h2>
-            </div>
-        </section>
-    </main>
+    <main>
 
     <footer>
         <div class="container container-footer">
