--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <use href="./images/icons.svg#icon-nz"></use>
                     </svg>
                 </a>
-            <ul class="list islands">
+            <ul class="list islands-header">
                 <li><a href="#" class="link">Wyspa Południowa</a></li>
                 <li><a href="#" class="link">Wyspa Północna</a></li>
                 <li><a href="#" class="link">Galeria Zdjęć</a></li>
@@ -56,26 +56,52 @@
         </div>
     </header>
 
-    <main class="main-background">
+    <main>
         <section class="title-background">
             <div class="container">
                 <h1 class="title">NOWA ZELANDIA</h1>
             </div>
         </section>
 
-        <section>
-            <div class="container">
-                <h2 class="titletwo">Wyspa Południowa</h2>
-                <p>Queenstown...</p>
-                <p>Christchurch...</p>
+        <section class="info">
+            <div class="container info-box-text">
+                <h2 class="visually-hidden">Info:</h2>
+                <div class="info-box">
+                    <svg width="176" height="176" class="svg-flag">
+                        <use href="./images/icons.svg#icon-NZ_on_the_globe"></use>
+                    </svg>
+                    <ul>
+                        <li>Stolica: Wellington</li>
+                        <li>Język: angielski, maoryski</li>
+                        <li>Powierzchnia: ~268tys. km²</li>
+                        <li>Ludność: ~5,2mln</li>
+                        <li>Waluta: dolar nowozelandzki</li>
+                    </ul>
+                </div>
+                <div class="info-text">
+                    <p>Nowa Zelandia to państwo wyspiarskie na południowo-zachodnim Pacyfiku, składające się z dwóch głównych wysp (Północnej i Południowej) oraz szeregu mniejszych wysp.</p>
+                    <button type="button" class="map-button">MAPA</button>
+                </div>
             </div>
         </section>
 
-        <section>
+        <section class="islands-main">
+            <div class="container">
+                <h2 class="titletwo">Wyspa Południowa</h2>
+                <h3>Queenstown...</h3>
+                    <p>Info</p>
+                <h3>Christchurch...</h3>
+                    <p>Info</p>
+            </div>
+        </section>
+
+        <section class="islands-main">
             <div class="container">
                 <h2 class="titletwo">Wyspa Północna</h2>
-                <p>Wellington</p>
-                <p>Auckland...</p>
+                <h3>Wellington</h3>
+                    <p>Info</p>
+                <h3>Auckland...</h3>
+                    <p>Info</p>
             </div>
         </section>
 
@@ -88,8 +114,16 @@
 
     <footer>
         <div class="container container-footer">
-            <a href="./index.html" class="link logo">New<span class="logo-span">Zealand</span></a>
+            <a href="./index.html" class="link logo">New<span class="logo-span">Zealand</span>
+                <svg width="26" height="26" class="svg-flag-logo">
+                    <use href="./images/icons.svg#icon-nz"></use>
+                </svg>
+            </a>
         </div>
+        <!-- /mapa/ -->
+                <div>
+                    <img src="./images/nz-map.jpg" alt="Map of New Zealand" width="852" height="935">
+                </div>
     </footer>
 </body>
 </html>
