--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -18,13 +18,13 @@
 
 <body>
     <header>
-        <div class="container-header">
+        <div class="container container-header">
             <a href="./index.html" class="link logo">New<span class="logo-span">Zealand</span>
                 <svg width="26" height="26" class="svg-flag-logo">
                     <use href="./images/icons.svg#icon-nz"></use>
                 </svg>
             </a>
-            <ul class="list islands">
+            <ul class="list islands-header">
                 <li><a href="#" class="link">South Island</a></li>
                 <li><a href="#" class="link">North Island</a></li>
                 <li><a href="#" class="link">Photo Gallery</a></li>
@@ -65,7 +65,11 @@
 
     <footer>
         <div class="container container-footer">
-            <a href="./index.html" class="link logo">New<span class="logo-span">Zealand</span></a>
+            <a href="./index.html" class="link logo">New<span class="logo-span">Zealand</span>
+                <svg width="26" height="26" class="svg-flag-logo">
+                    <use href="./images/icons.svg#icon-nz"></use>
+                </svg>
+            </a>
         </div>
     </footer>
 </body>
